<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#000000"
    >

    <RelativeLayout
        android:id="@+id/noun_encryp"
        android:layout_width="100sp"
        android:layout_height="125sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="142sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="122sp"
        android:background="@drawable/noun_encryption_1378916"
        />

    <TextView
        android:id="@+id/cryptobuddy"
        android:layout_width="375sp"
        android:layout_height="60sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="217sp"
        android:text="@string/cryptobuddy"
        android:textAppearance="@style/cryptobuddy"
        android:gravity="center_horizontal|center_vertical"
        />

    <EditText
        android:id="@+id/mobile_numb"
        android:layout_width="281sp"
        android:layout_height="39sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="350sp"
        android:hint="@string/mobile_numb"
        android:textColor="#FFE500"
        android:inputType="number"
        android:textColorHint="#FFE500"
        android:gravity="center_horizontal|center_vertical"
        android:alpha="0.5"
        />
    <View

        android:layout_width="286dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="390dp"
        android:background="@drawable/line"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="281sp"
        android:layout_height="39sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="425sp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#FFE500"
        android:textColorHint="#FFE500"
        android:gravity="center_horizontal|center_vertical"
        android:alpha="0.5"
        />
    <View

        android:layout_width="286dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="465dp"
        android:background="@drawable/line"
        />



    <TextView
        android:id="@+id/log_in"
        android:layout_width="281sp"
        android:layout_height="52sp"
        android:onClick="login"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="50sp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="505sp"
        android:text="@string/log_in"
        android:background="@drawable/rectangle"
        android:textAppearance="@style/log_in"
        android:gravity="center_horizontal|center_vertical"
        />
    <View
        android:layout_width="130.06dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="201.94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="570.28dp"
        android:background="@drawable/line"
        />
    <TextView
        android:id="@+id/or"
        android:layout_width="190dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="546dp"
        android:text="@string/or"
        android:textAppearance="@style/or"
        android:gravity="center_horizontal|center_vertical"
        />
    <View
        android:layout_width="129.09dp"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="46dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="570dp"
        android:background="@drawable/line"
        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="281sp"
        android:layout_height="52sp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="51sp"
        android:onClick="signup"
        android:layout_alignParentTop="true"
        android:layout_marginTop="581sp"
        android:background="@drawable/rectangle"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        android:gravity="center_horizontal|center_vertical"
        />
</RelativeLayout>